# web2_hw_12

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3de717804dbe_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py  user.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
